Produce cache files for names and places

--- a/bin/distrib/setup/lang/welcome.htm
+++ b/bin/distrib/setup/lang/welcome.htm
@@ -242,7 +242,12 @@ fr: <a href="gwsetup?lang=%l;v=cleanup.htm">Nettoyage</a>
 it: <a href="gwsetup?lang=%l;v=cleanup.htm">Pulizia</a>
 lv: <a href="gwsetup?lang=%l;v=cleanup.htm">Sakopðanu</a>
 sv: <a href="gwsetup?lang=%l;v=cleanup.htm">Upprensning</a>
-] (consang)
+] (gwu
+[
+en: then
+fr: puis
+]
+gwc)
 
 <li>[
 co: <a href="gwsetup?lang=%l;v=rename.htm">Cambiu di nome</a>
@@ -325,6 +330,11 @@ co: <a href="gwsetup?lang=%l;v=gwdiff.htm">Calcula a sfarenza trà duie base</a>
 en: <a href="gwsetup?lang=%l;v=gwdiff.htm">Compute the difference between two bases</a>
 fr: <a href="gwsetup?lang=%l;v=gwdiff.htm">Calcule la différence entre deux bases</a>
 ] (gwdiff)
+
+<li>[
+en: <a href="gwsetup?lang=%l;v=cache_files.htm">Compute names and places cache files</a>
+fr: <a href="gwsetup?lang=%l;v=cache_files.htm">Calcule les fichiers cache pour les noms et lieux</a>
+] (cache_files)
 
 
 </ul>
