--- a/bin/distrib/setup/lang/cache_files.htm
+++ b/bin/distrib/setup/lang/cache_files.htm
@@ -18,8 +18,8 @@ fr: Cache files
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
-en: Produce cache files (Lastnames, firstnames, places)
-fr: Condtruire les ficheirs cache (noms, prénoms, places)
+en: Produce cache files (lastnames, firstnames, places…)
+fr: Construire les fichiers cache (noms, prénoms, places…)
 ]
 </h1>
 </div>
@@ -31,7 +31,7 @@ fr: Condtruire les ficheirs cache (noms, prénoms, places)
 
 [
 en: Select your database by clicking on the associated button:
-fr: Sélectionnez votre base de données en cliquant sur le bouton associé :
+fr: Sélectionnez votre base de données en cliquant sur le bouton associé :
 ]
 <p>
 <table class="setup">
@@ -42,7 +42,7 @@ fr: Sélectionnez votre base de données en cliquant sur le bouton associé :
 </tr>|
 <tr align="left"><td>- [
 en: there is no database at present
-fr: il n'y a aucune base de données actuellement
+fr: il n’y a aucune base de données actuellement
 ]</tr></td>}
 </table></dl>
 <p>
@@ -51,7 +51,7 @@ fr: il n'y a aucune base de données actuellement
 de: Wähle die gewünschten Optionen:
 en: Select the options you want:
 es: Seleccione las opciones que Ud. desee:
-fr: Sélectionnez les options que vous désirez :
+fr: Sélectionnez les options que vous désirez :
 it: Selezionate le opzioni desiderate:
 lv: Izvçlieties atbilstoðos parametrus:
 sv: Välj de optioner du vill ha:
