--- a/bin/distrib/setup/lang/cache_files_ok.htm
+++ b/bin/distrib/setup/lang/cache_files_ok.htm
@@ -27,12 +27,12 @@ fr: Fichiers cache construits.
 <p />
 [
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: Or you can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
+en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
     menu</a>.
 es: Si no Ud. puede regresar al
     <a href="gwsetup?lang=%l;v=welcome.htm">menú principal</a>.
 fi: Tai voit palata <a href="gwsetup?lang=%l;v=welcome.htm">päävalikkoon</a>.
-fr: Ou vous pouvez revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
+fr: Vous pouvez revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
     principal</a>.
 it: Potete tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
     principale</a>.
