--- a/bin/distrib/setup/lang/bsi_cache_files.htm
+++ b/bin/distrib/setup/lang/bsi_cache_files.htm
@@ -49,8 +49,8 @@ es: La operación "%d" va a aplicarse a su base "%a".
     algunos minutos, de acuerdo al caso. Sea paciente.
 fi: Toiminto "%d" hyväksytään tietokantaasi "%a". Varoitus: toiminto kestää
     hetken. Ole kärsivällinen.
-fr: L’opération "%d" va être appliquée sur votre base
-    "%a". Attention: l’opération peut prendre quelques secondes ou
+fr: L’opération « %d » va être appliquée sur votre base
+    %a. Attention : l’opération peut prendre quelques secondes ou
     quelques minutes, suivant les cas. Soyez patient.
 it: L'operazione viene applicata alla vostra base. Attenzione:
     l'operazione può prendere qualche secondo o qualche minuto,
@@ -63,17 +63,11 @@ sv: Operationen "%d" kommer att appliceras på din databas "%a". Varning: det
 
 <p />
 [
-en: <span style="color:#FF0000;">WARNING</span>: the -del command suppresses irreversibly some families. It may be prudent to have a backup archive.
-fr: <span style="color:#FF0000;">ATTENTION</span> : la commande -del supprime des familles de façon irréversible. Il peut être prudent d'avoir une archive de sauvegarde.
-]
-
-<p />
-[
 de: Drücke diesen Knopf um zu starten:
 en: Push the button below to start:
 es: Apoyar sobre el botón inferior para comenzar:
 fi: Paina alla olevaa nappia aloittaaksesi:
-fr: Appuyez sur le bouton ci-dessous pour démarrer :
+fr: Appuyez sur le bouton ci-dessous pour démarrer :
 it: Per iniziare, cliccate sul bottone qui sotto:
 lv: Nospiediet podziòu zemâk, lai sâktu:
 sv: Tryck på knappen nedan för att starta:
@@ -103,5 +97,5 @@ sv: Denna operation motsvarar de följande kommandona:
 ]
 
 <pre>
-     $ %x%/%d %S
+     $ %x%/%d%S
 </pre>
