--- a/bin/distrib/setup/lang/bso_comm_log.htm
+++ b/bin/distrib/setup/lang/bso_comm_log.htm
@@ -2,7 +2,7 @@
 <html lang="%l">
 <head>
   <!-- Copyright (c) 1998-2006 INRIA - GeneWeb -->
-  <!-- $Id: bso_comm.htm,v 7.00 2018-04-10 05:35:06 hg Exp $ -->
+  <!-- $Id: bso_comm_log.htm,v 7.00 2018-04-10 05:35:06 hg Exp $ -->
   <meta charset="utf-8">
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
@@ -21,7 +21,8 @@ sv: Innehållet i filen "comm.log"
 
 <body %Vbody_prop;>
 
-<div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
+<div style="background:url('images/gwlogo.png') no-repeat left top;
+  text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
 de: Inhalt der Datei "comm.log"
@@ -34,9 +35,7 @@ sv: Innehållet i filen "comm.log"
 ]
 </h1>
 </div>
-
-<p />
-
+<p>
 <dl><dt><dd>
 <pre>
 %g{- [
@@ -52,9 +51,3 @@ lv: datne ir tukða
 ] -}
 </pre>
 </dl>
-
-contenu d'un autre fichier (%o) :
-
-%H
-
-done
