--- a/bin/distrib/setup/lang/cleanup1.htm
+++ b/bin/distrib/setup/lang/cleanup1.htm
@@ -130,6 +130,6 @@ it: Sotto MSdos
         $ del old\%a.gwb\*.*
         $ rmdir old\%a.gwb
         $ move %a.gwb old\.
-     $ %x%/gwc tmp.gw -nofail -o %a > comm.log
+     $ %x%/gwc tmp.gw -nofail -o %a > %S
 </pre>
 
