--- a/bin/distrib/setup/lang/err_bsi.htm
+++ b/bin/distrib/setup/lang/err_bsi.htm
@@ -70,32 +70,7 @@ sv: ingen utskrift
 ] -}
 </pre>
 </dl>
-
-<p />
-[
-en: And the content of gwsetup.log
-fr: Et le contenu de gwsetup.log
-]
-
-<p />
-
-<dl><dt><dd>
-<pre>
-%G{- [
-de: no traces
-en: no traces
-es: ningún indicio
-fi: ei jälkiä
-fr: pas de traces
-it: nessuna traccia
-lv: no traces
-sv: ingen utskrift
-] -}
-</pre>
-</dl>
-
-<p />
-
+<p>
 [
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: Or you can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
@@ -112,3 +87,9 @@ lv: Vai Jûs varat atgriezties uz <a href="gwsetup?lang=%l;v=welcome.htm">galven
 sv: Eller du kan återvända till
     <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
 ]
+<p>
+[
+en: Content of <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log
+fr: Contenu de <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log
+]
+</dl>
