--- a/bin/distrib/setup/lang/gwdiff.htm
+++ b/bin/distrib/setup/lang/gwdiff.htm
@@ -208,7 +208,6 @@ sv: Spara minne under operationen (men det kommer att gå saktare).
 </tr>
 </table></dl>
 
-<!--
 <p>
 <dl><dt><dd><table class="setup">
 <tr align="left">
@@ -219,7 +218,7 @@ en: Output results to this file.
 fr: Rediriger les résultats vers ce fichier.
 ]</td>
 </tr>
-</table></dl>-->
+</table></dl>
 <p>
 <li>
 [
