--- a/bin/distrib/setup/lang/ok_clean.htm
+++ b/bin/distrib/setup/lang/ok_clean.htm
@@ -2,7 +2,7 @@
 <html lang="%l">
 <head>
   <!-- Copyright (c) 1998-2006 INRIA - GeneWeb -->
-  <!-- $Id: clean_ok.htm,v 5.1 2006-01-01 05:35:06 ddr Exp $ -->
+  <!-- $Id: ok_clean.htm,v 5.1 2006-01-01 05:35:06 ddr Exp $ -->
   <meta charset="utf-8">
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
@@ -36,9 +36,7 @@ sv: Operationen klar
 ]
 </h1>
 </div>
-
-<p />
-
+<p>
 [
 de: Deine Datenbank "%a" wurde erfolgreich aufgeräumt.
 en: So. The cleaning up of you database "%a" is completed.
@@ -49,9 +47,7 @@ it: La pulizia della base "%a" è stata portata a termine.
 lv: Darîts. Jûsu datu bâzes "%a" sakopðana ir pabeigta.
 sv: Upprensningen av din databas "%a" är klar.
 ]
-
-<p />
-
+<p>
 [
 de: Die Datenbank wurde erfolgreich neu erzeugt: Die alte Version
     steht im Unterverzeichnis "old" im Verzeichnis "%w".
@@ -80,9 +76,7 @@ sv: Din databas har blivit helt återskapad, den gamla versionen finns i
     underkatalogen "old" i katalogen "%w".
     Du kan återskapa den om det blir något problem.
 ]
-
-<p />
-
+<p>
 [
 de: Du kannst nun mit deiner superaufgeräumten neuen Datenbank
     arbeiten…
@@ -95,12 +89,9 @@ lv: Jûs variet griezties pie Jûsu atjauninâtâs datu bâzes…
 sv: Du kan nu konsultera din nya rena databas…
 ]
 
-<p />
-
+<p>
 <ul><li><a href="http://%m:%P/%a">http://%m:%P/%a</a></ul>
-
-<p /><br />
-
+<p>
 … [
 de: oder zurück zum
     <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a> springen.
@@ -113,4 +104,16 @@ it: o tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu principale</a>.
 lv: vai atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ
     izvçlnç</a>.
 sv: eller återvända till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
+]
+<p>
+[
+en: Alert messages in file
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=clean">%S</a>.
+fr: Messages d’alerte dans le fichier
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=clean">%S</a>.
+]
+<p>
+[
+en: Content of <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
+fr: Contenu de <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
 ]
