--- a/bin/distrib/setup/lang/ok_del.htm
+++ b/bin/distrib/setup/lang/ok_del.htm
@@ -2,7 +2,7 @@
 <html lang="%l">
 <head>
    <!-- Copyright (c) 1998-2006 INRIA - GeneWeb -->
-   <!-- $Id: del_ok.htm,v 7.00 2018-01-01 05:35:06 ddr Exp $ -->
+   <!-- $Id: ok_del.htm,v 7.00 2018-01-01 05:35:06 ddr Exp $ -->
   <meta charset="utf-8">
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
