--- a/bin/distrib/setup/lang/ok_gwb2ged.htm
+++ b/bin/distrib/setup/lang/ok_gwb2ged.htm
@@ -2,7 +2,7 @@
 <html lang="%l">
 <head>
   <!-- Copyright (c) 1998-2006 INRIA - GeneWeb -->
-  <!-- $Id: gw2gd_ok.htm,v 7.00 2018-04-20 05:35:06 ddr Exp $ -->
+  <!-- $Id: ok_gwb2ged.htm,v 7.00 2018-04-20 05:35:06 ddr Exp $ -->
   <meta charset="utf-8">
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
@@ -47,9 +47,7 @@ it: L'estrazione del file GEDCOM è terminata.
 lv: GEDCOM datnes apstrâde ir pabeigta.
 sv: Exporten av GEDCOM-filen är avslutad.
 ]
-
-<p />
-
+<p>
 [
 de: Es wurde eine Datei namens "%o" erzeugt.
 en: This has built a file named "%o".
@@ -60,9 +58,7 @@ it: Questa operazione ha creato un file chiamato "%o".
 lv: Rezultâtâ ir izviedota datne: "%o".
 sv: Det har skapats en fil benämnd "%o".
 ]
-
-<p />
-
+<p>
 [
 de: Diese Datei steht ihm Verzeichnis
 en: This file is in the directory
@@ -71,9 +67,7 @@ fi: Tämä tiedosto on hakemistossa
 fr: Ce fichier se trouve dans le répertoire
 it: Questo file si trova nella directory
 ] "%w".
-
-<p />
-
+<p>
 [
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
@@ -87,4 +81,16 @@ it: Potete tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
 lv: Jûs variet atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ
     izvçlnç</a>.
 sv: Du kan återvända till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
+]
+<p>
+[
+en: Alert messages in file
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=gwb2ged">%S</a>.
+fr: Messages d’alerte dans le fichier
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=gwb2ged">%S</a>.
+]
+<p>
+[
+en: Content of <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
+fr: Contenu de <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
 ]
