--- a/bin/distrib/setup/lang/ok_gwd.htm
+++ b/bin/distrib/setup/lang/ok_gwd.htm
@@ -2,7 +2,7 @@
 <html lang="%l">
 <head>
   <!-- Copyright (c) 1998-2006 INRIA - GeneWeb -->
-  <!-- $Id: gwd_ok.htm,v 7.00 2018-04-19 05:35:06 ddr Exp $ -->
+  <!-- $Id: ok_gwd.htm,v 7.00 2018-04-19 05:35:06 ddr Exp $ -->
   <meta charset="utf-8">
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
@@ -36,7 +36,6 @@ sv: Parametrar uppdaterade
 </div>
 
 <p>
-
 <font color=red>[
 de: Damit die Parameter wirksam werden, muß der 
     <a href="gwsetup?lang=%l;v=gwd_info.htm">gwd-Dienst</a> 
@@ -61,9 +60,7 @@ sv: För att parametrarna ska kunna börja användas, måste <a
     href="gwsetup?lang=%l;v=gwd_info.htm">gwd servicen</a> stoppas,
     om den var igång, och sedan återstartad.
 ]</font>
-
 <p>
-
 [
 de: Zu deiner Information: Die Parameter sind in der Textdatei "gwd.arg"
     im Verzeichnis "gw" deiner
@@ -86,9 +83,7 @@ sv: Information: parametrarna är lagrade i en textfil benämnd "gwd.arg"
     i katalogen "gw" för din <font color=#2f6400><b>GeneWeb</b></font>
     distribution.
 ]
-
 <p>
-
 [
 de: Hier ist der Inhalt der Datei:
 en: Here is its contents:
@@ -98,9 +93,7 @@ it: Ecco il suo contenuto:
 lv: Ðeit ir "gwd.arg" saturs:
 sv: Här är dess innehåll:
 ]
-
 <p>
-
 <dl><dt><dd>
 <pre>
 %r{- [
@@ -113,7 +106,7 @@ sv: tom fil
 ] -}
 </pre>
 </dl>
-
+<p>
 [
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
