--- a/bin/distrib/setup/lang/ok_gwdiff.htm
+++ b/bin/distrib/setup/lang/ok_gwdiff.htm
@@ -2,7 +2,7 @@
 <html lang="%l">
 <head>
   <!-- Copyright (c) 1998-2006 INRIA - GeneWeb -->
-  <!-- $Id: gwdiff_ok.htm,v 7.00 2018-04-19 05:35:06 ddr Exp $ -->
+  <!-- $Id: ok_gwdiff.htm,v 7.00 2018-04-19 05:35:06 ddr Exp $ -->
   <meta charset="utf-8">
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
@@ -24,14 +24,12 @@ fr: Différence calculée
 ]
 </h1>
 </div>
-
-<p />
+<p >
 [
 en: Done. The operation is terminated.
 fr: L’opération est terminée.
 ]
-
-<p />
+<p>
 [
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can also return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
@@ -48,12 +46,8 @@ lv: Jûs variet arî atgriezties <a
 sv: Du kan också återvända till <a
     href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
 ]
-
-<br /><p />
-
+<p>
 [
-en: Click <a href="gwsetup?lang=%l;v=bso_comm.htm">here</a> for the results in "comm.log":
-fr: Cliquer <a href="gwsetup?lang=%l;v=bso_comm.htm">ici</a> pour les résultats dans "comm.log".
+en: Click <a href="gwsetup?lang=%l;v=bso_comm_log.htm">here</a> for the results in "comm.log":
+fr: Cliquer <a href="gwsetup?lang=%l;v=bso_comm_log.htm">ici</a> pour les résultats dans "comm.log".
 ]
-
-<p />
