--- a/bin/distrib/setup/lang/ok_gwu.htm
+++ b/bin/distrib/setup/lang/ok_gwu.htm
@@ -2,7 +2,7 @@
 <html lang="%l">
 <head>
   <!-- Copyright (c) 1998-2006 INRIA - GeneWeb -->
-  <!-- $Id: gwu_ok.htm,v 7.00 2018-04-19 05:35:06 ddr Exp $ -->
+  <!-- $Id: ok_gwu.htm,v 7.00 2018-04-19 05:35:06 ddr Exp $ -->
   <meta charset="utf-8">
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
@@ -21,7 +21,8 @@ sv: Operationen klar
 
 <body %Vbody_prop;>
 
-<div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
+<div style="background:url('images/gwlogo.png') no-repeat left top;
+  text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
 de: Operation durchgeführt
@@ -52,17 +53,17 @@ lv: <font color=#2f6400><b>GeneWeb</b></font> datnes izveide ir pabeigta.
 sv: Exporteringen av <font color=#2f6400><b>GeneWeb</b></font> källfilen
     är avslutad.
 ]
-
 <p>
 %Iodir;.;{
 [
 en: Files were reconstructed in the original sources directory.<br>
     Data created without origin file has been directed to the file
-    %o or to comm.log.
-    It is up to you to manage this new source file, or to merge this data into existing files.
+    %o or to %S.
+    It is up to you to manage this new source file, or to merge this
+    data into existing files.
 fr: Les fichiers ont été reconstitués dans le dossier d'origine.<br>
     Les nouvelles données sans fichier d'origine ont été redirigées vers le
-    fichier %o ou vers comm.log.
+    fichier %o ou vers %S.
     Il vous revient la tâche de gérer ce nouveau fichier .gw ou d'ajouter ces 
     données aux fichiers existants.
 ]
@@ -77,9 +78,7 @@ it: Questa operazione ha creato un file chiamato "%o".
 lv: Rezultâtâ izveidota datne: "%o".
 sv: Den har skapat en fil benämnd "%o".
 ]
-
 <p>
-
 [
 de: Diese Datei steht im Verzeichnis "%w".
 en: This file is in the directory "%w".
@@ -88,22 +87,6 @@ fr: Ce fichier se trouve dans le répertoire "%w".
 it: Questo file si trova nella directory "%w".
 ]
 }
-<p>
-
-Comm.log:
-<pre>
-%g{- [
-de: empty file
-en: empty file
-es: fichero vacio
-fi: tyhjä tiedosto
-fr: fichier vide
-it: file vuoto
-lv: datne ir tukða
-sv: tom fil
-lv: datne ir tukða
-] -}
-</pre>
 <p>
 [
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
@@ -118,3 +101,16 @@ lv: Jûs variet atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ
     izvçlnç</a>.
 sv: Du kan återvända till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
 ]
+<p>
+[
+en: Alert messages in file
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=gwu">%S</a>.
+fr: Messages d’alerte dans le fichier
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=gwu">%S</a>.
+]
+<p>
+[
+en: Content of <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
+fr: Contenu de <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
+]
+
