--- a/bin/distrib/setup/lang/ok_recover.htm
+++ b/bin/distrib/setup/lang/ok_recover.htm
@@ -2,7 +2,7 @@
 <html lang="%l">
 <head>
   <!-- Copyright (c) 1998-2019 INRIA - GeneWeb -->
-  <!-- $Id: bso_ok.htm,v 7.00 13/12/2018 17:06:06 ddr Exp $ -->
+  <!-- $Id: ok_recover.htm,v 7.00 13/12/2018 17:06:06 ddr Exp $ -->
   <meta charset="utf-8">
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
@@ -38,7 +38,6 @@ sv: Databasen skapad
 </div>
 
 <p>
-
 [
 de: Die Operation ist beendet. Deine Datenbank namens "%o" wurde angelegt.
 en: The operation is terminated: Your database named “%o” is created.
@@ -52,26 +51,14 @@ lv: Darîts. Datu bâzes izveidoðana ir pabeigta. Jûsu datu bâze "%o" ir
     izveidota.
 sv: Operationen är avklarad. Din databas benämnd "%o" är skapad.
 ]
-
-[
-en: See the <a href="gwsetup?lang=%l;v=bso_comm.htm">alert messages</a>
-    of the file <samp>comm.log</samp>.
-fr: Voir les <a href="gwsetup?lang=%l;v=bso_comm.htm">messages d’alerte</a>
-    du fichier <samp>comm.log</samp>.
-]
-
-</p>
 <p>
-
 [
 en: Use gwsetup to <a href="gwf?lang=%l;&anon=%o">partially configure the
     database parameters</a> (<samp>%o.gwb%/etc%/config.txt</samp>)
 fr: Utiliser gwsetup pour <a href="gwf?lang=%l;&anon=%o">configure les
     paramètres de la base de donnée</a> (<samp>%o.gwb%/etc%/config.txt</samp>)
 ]
-</p>
 <p>
-
 [
 de: Um mit der Datenbank zu arbeiten und Änderungen daran vornehmen zu
     können, muß der <a
@@ -94,10 +81,7 @@ lv: Lai darbotos ar Jûsu datubâzi, jâpalaiþ <a
 sv: För att konsultera din databas och möjligen modifiera den, måste <a
     href="gwsetup?lang=%l;v=gwd_info.htm">gwd servicen</a> startas.
 ]
-
-</p>
 <p>
-
 [
 de: Sofern dies der Fall ist, probiere die unten angegebene Adresse aus. Die
     angezeigte Seite ist die "Willkommensseite" deiner Datenbank. Setze ein
@@ -123,16 +107,11 @@ sv: Om den är det, försök med adressen nedan. Den visade sidan kallas
     "välkomstsidan" för din databas. Lägg till den till dina
     Favoriter/Bokmärken.
 ]
-
-</p>
 <p>
   <ul>
     <li><a href="http://%m:%P/%o">http://%m:%P/%o</a></li>
   </ul>
-</p>
-
 <p>
-
 [
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can also return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
@@ -149,5 +128,15 @@ lv: Jûs variet arî atgriezties <a
 sv: Du kan också återvända till <a
     href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
 ]
-
-</p>
+<p>
+[
+en: Alert messages in file
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=recover">%S</a>.
+fr: Messages d’alerte dans le fichier
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=recover">%S</a>.
+]
+<p>
+[
+en: Content of <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
+fr: Contenu de <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
+]
