--- a/bin/distrib/setup/lang/ok_update_nldb.htm
+++ b/bin/distrib/setup/lang/ok_update_nldb.htm
@@ -2,7 +2,7 @@
 <html lang="%l">
 <head>
   <!-- Copyright (c) 1998-2006 INRIA - GeneWeb -->
-  <!-- $Id: update_nldb_ok.htm,v 7.00 2018-04-19 05:35:06 ddr Exp $ -->
+  <!-- $Id: ok_update_nldb.htm,v 7.00 2018-04-19 05:35:06 ddr Exp $ -->
   <meta charset="utf-8">
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
@@ -36,7 +36,6 @@ sv: Operationen klar
 ]
 </h1>
 </div>
-
 [
 de: So. Die Operation "%d" auf der Datenbank "%a" ist beendet.
 en: So. The operation "%d" on the database "%a" is terminated.
@@ -49,9 +48,7 @@ it: L'operazione "%d" sulla base "%a" é terminata.
 lv: Kârtîbâ. Darbîba "%d" ar datu bâzi "%a" pabeigta.
 sv: Operationen "%d" på databasen "%a" är avslutad.
 ]
-
-<p />
-
+<p>
 [
 de: Du kannst nun mit deiner Datenbank arbeiten…
 en: You can consult it:
@@ -62,13 +59,9 @@ it: Ora potete consultarla
 lv: Jûs variet ar to darboties:
 sv: Du kan konsultera den:
 ]
-
-<p />
-
+<p>
 <ul><li><a href="http://%m:%P/%a">http://%m:%P/%a</a></ul>
-
-<p /><br />
-
+<p>
 … [
 de: oder zurück zum
     <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a> springen.
@@ -80,4 +73,16 @@ fr: ou revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu principal</a>.
 it: o tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu principale</a>.
 lv: atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ izvçlnç</a>.
 sv: eller återvända till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
+]
+<p>
+[
+en: Alert messages in file
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=update_nldb">%S</a>.
+fr: Messages d’alerte dans le fichier
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=update_nldb">%S</a>.
+]
+<p>
+[
+en: Content of <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
+fr: Contenu de <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
 ]
