--- a/bin/distrib/setup/lang/recover2.htm
+++ b/bin/distrib/setup/lang/recover2.htm
@@ -181,5 +181,5 @@ sv: Denna operation motsvarar de följande kommandona:
      $ cd "%a"
      $ .%/%U %i %O %w%/%T
      $ cd "%w"
-     $ %x%Vsrc2new; %T -f -o %o > comm.log
+     $ %x%Vsrc2new; %T -f -o %o > %S
 </pre>
