--- a/bin/distrib/setup/lang/traces.htm
+++ b/bin/distrib/setup/lang/traces.htm
@@ -38,9 +38,7 @@ lv: Pçdçjâs komandas izpildes pçdas
 ]
 </h1>
 </div>
-
-<br /><p />
-
+<p>
 [
 de: Hier ist der Inhalt der Datei "comm.log":
 en: Here is the contents of the file "comm.log":
@@ -52,43 +50,7 @@ lv: Ðeit ir datnes "comm.log" saturs:
 sv: Här är innehållet i filen "comm.log":
 lv: Ðeit ir datnes "comm.log" saturs:
 ]
-
-<dl><dt><dd>
-<pre>
-%g{- [
-de: empty file
-en: empty file
-es: fichero vacio
-fi: tyhjä tiedosto
-fr: fichier vide
-it: file vuoto
-lv: datne ir tukða
-sv: tom fil
-lv: datne ir tukða
-] -}
-</pre>
-</dl>
-
-[
-en: And the content of gwsetup.log 
-fr: Et le contenu de gwsetup.log
-]
-<dl><dt><dd>
-<pre>
-%G{- [
-de: no traces
-en: no traces
-es: ningÃºn indicio
-fi: ei jÃ¤lkiÃ¤
-fr: pas de traces
-it: nessuna traccia
-lv: no traces
-sv: ingen utskrift
-] -}
-</pre>
-</dl>
-
-
+<p>
 [
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
@@ -105,3 +67,22 @@ lv: Jûs variet atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ
 sv: Du kan återvända till <a
     href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
 ]
+<p>
+[
+en: Content of <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
+fr: Contenu de <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
+]
+<p>
+<pre>
+%g{- [
+de: empty file
+en: empty file
+es: fichero vacio
+fi: tyhjä tiedosto
+fr: fichier vide
+it: file vuoto
+lv: datne ir tukða
+sv: tom fil
+lv: datne ir tukða
+] -}
+</pre>
