--- a/bin/distrib/setup/lang/welcome.htm
+++ b/bin/distrib/setup/lang/welcome.htm
@@ -120,15 +120,15 @@ sv: en <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM-fil</a>
   <div style="float:left; width:50%%;">
     <b>
 [
-co: Creà una genealugia
-de: Familienstammbaum erstellen
-en: Create a genealogical database
-es: Crear árbol genealógico
-fi: Luo Family Tree
-fr: Créer une base de données généalogique
-it: Crea l'albero genealogico
-lv: Izveidot Family Tree
-sv: Skapa Family Tree
+co: Creà…
+de: Erstellen…
+en: Create…
+es: Crear…
+fi: Luo…
+fr: Créer…
+it: Crea…
+lv: Izveidot…
+sv: Skapa…
 ]
     </b>
 <ul>
@@ -144,18 +144,6 @@ it: <a href="gwsetup?lang=%l;v=simple.htm">vuoto</a>
 lv: <a href="gwsetup?lang=%l;v=simple.htm">tukšs</a>
 sv: <a href="gwsetup?lang=%l;v=simple.htm">tom</a>
 ] (gwc)
-
-<s><li>[
-co: <a href="gwsetup?lang=%l;v=simple2.htm">viota</a>
-de: <a href="gwsetup?lang=%l;v=simple2.htm">leer</a>
-en: from an <a href="gwsetup?lang=%l;v=simple2.htm">empty</a> database
-es: <a href="gwsetup?lang=%l;v=simple2.htm">vacío</a>
-fi: <a href="gwsetup?lang=%l;v=simple2.htm">tyhjä</a>
-fr: à partir d’une base de donnée <a href="gwsetup?lang=%l;v=simple2.htm">vide</a>
-it: <a href="gwsetup?lang=%l;v=simple2.htm">vuoto</a>
-lv: <a href="gwsetup?lang=%l;v=simple2.htm">tukšs</a>
-sv: <a href="gwsetup?lang=%l;v=simple2.htm">tom</a>
-] (gwc2)</s>
 
 <br><br><b>GENEWEB (.gw)</b>
 <li>[
@@ -185,7 +173,7 @@ sv: från en <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM-fil</a>
 ] (ged2gwb)
 
 </ul>
-</div>
+  </div>
 
 </div>
 
