--- a/bin/distrib/setup/lang/ok_connex.htm
+++ b/bin/distrib/setup/lang/ok_connex.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <!-- Copyright (c) 1998-2006 INRIA - GeneWeb -->
-  <!-- $Id: connex_ok.htm,v 7.00 2018-04-10 05:35:06 hg Exp $ -->
+  <!-- $Id: ok_connex.htm,v 7.00 2018-04-10 05:35:06 hg Exp $ -->
   <meta charset="utf-8">
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
@@ -34,32 +34,38 @@ fr: Vous pouvez consulter les résultats de deux façons différentes :
 en: By looking at the terminal window if you have not asked for result redirection.
 fr: En regardant dans la fenêtre qui s'est ouverte si vous n'avez pas demandé de redirection des résultats.
 ]
-
 <li>
 %Io1;;{
 [
 en: Using <b>gwd</b> to <a href="http://%m:%P/%a?w=w;lang=%l;m=NOTES;f=connex">visualize the
-    file</a> in the NOTES folder of your base where you have redirected output (%a.gwb%/notes%/connex.txt).<br>
-    This file contains the last set of data stored at this location (which is not necessarily the one you have just computed
+    file</a> in the NOTES folder of your base where you have redirected output
+    (%a.gwb%/notes%/connex.txt).<br>
+    This file contains the last set of data stored at this location
+    (which is not necessarily the one you have just computed
     - see the time stamp at the head of the file).<br>
     This solution allows you to follow links to designated persons.
-fr: En utilisant <b>gwd</b> pour <a href="http://%m:%P/%a?w=w;lang=%l;m=NOTES;f=connex">visualiser
-    le fichier</a> dans le dossier NOTES où vous avez redirigé les résultats (%a.gwb%/notes%/connex.txt).<br>
-    Vous y verrez la dernière version du fichier connex.txt que vous avez créé à cet endroit
+fr: En utilisant <b>gwd</b> pour
+    <a href="http://%m:%P/%a?w=w;lang=%l;m=NOTES;f=connex">visualiser
+    le fichier</a> dans le dossier NOTES où vous avez redirigé les résultats
+    (%a.gwb%/notes%/connex.txt).<br>
+    Vous y verrez la dernière version du fichier connex.txt que vous avez
+    créé à cet endroit
     (qui n'est pas nécessairement celle que vous venez de calculer
     - voir l'horodateur en tête de fichier).<br>
     Cette solution vous permet de suivre les liens vers les personnes désignées.
-
 ]
 |
 [
-en: Using <b>gwsetup</b> to <a href="gwsetup?lang=%l;o=%K;v=bso_log.htm">visualize the file</a> in which results were redirected ("%K").
-fr: En utilisant <b>gwsetup</b> pour <a href="gwsetup?lang=%l;o=%K;v=bso_log.htm">visualiser le fichier</a> vers lequel ont été envoyés les résultats ("%K").
+en: Using <b>gwsetup</b> to
+    <a href="gwsetup?lang=%l;o=%K;v=bso_log.htm">visualize the file</a>
+    in which results were redirected ("%K").
+fr: En utilisant <b>gwsetup</b> pour
+    <a href="gwsetup?lang=%l;o=%K;v=bso_log.htm">visualiser le fichier</a>
+    vers lequel ont été envoyés les résultats ("%K").
 ]
 }
 </ul>
-
-<p />
+<p>
 [
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: Or you can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
@@ -75,4 +81,17 @@ lv: Vai Jûs varat atgriezties uz <a href="gwsetup?lang=%l;v=welcome.htm">galven
     izvçlni</a>.
 sv: Eller du kan återvända till
     <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
+]
+<p>
+[
+en: Alert messages in file
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=connex">%S</a>.
+fr: Messages d’alerte dans le fichier
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=connex">%S</a>.
+]
+
+<p>
+[
+en: Content of <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
+fr: Contenu de <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
 ]
