--- a/bin/distrib/setup/lang/ok_rename.htm
+++ b/bin/distrib/setup/lang/ok_rename.htm
@@ -2,7 +2,7 @@
 <html lang="%l">
 <head>
   <!-- Copyright (c) 1998-2006 INRIA - GeneWeb -->
-  <!-- $Id: ren_ok.htm,v 7.00 2018-04-19 05:35:06 ddr Exp $ -->
+  <!-- $Id: ok_rename.htm,v 7.00 2018-04-19 05:35:06 ddr Exp $ -->
   <meta charset="utf-8">
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
@@ -34,9 +34,7 @@ sv: Operationen klar
 ]
 </h1>
 </div>
-
-<br><p>
-
+<p>
 [
 de: Deine Datenbank wurde umbenannt. Hier ist die neue Übersicht:
 en: Your databases have been renamed. Here is the new list:
@@ -49,11 +47,8 @@ it: Le vostre basi di dati hanno cambiato nome.
 lv: Jûsu datu bâzes ir pârsauktas. Ðeit ir jaunais datu bâzu saraksts:
 sv: Dina databaser har blivit omdöpta. Här är den nya listan:
 ]
-
 <p>
-
 <ul>
-
 %b{<li><a href="http://%m:%P/%a">%a</a>|
 <li>[
 de: keine Datenbank vorhanden
@@ -66,9 +61,7 @@ sv: det finns ingen databas för tillfället
 ]}
 
 </ul>
-
 <p>
-
 [
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
@@ -81,4 +74,16 @@ it: Potete tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
 lv: Jûs variet atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ
     izvçlnç</a>.
 sv: Du kan återvända till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
+]
+<p>
+[
+en: Alert messages in file
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=rename">%S</a>.
+fr: Messages d’alerte dans le fichier
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=rename">%S</a>.
+]
+<p>
+[
+en: Content of <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
+fr: Contenu de <a href="gwsetup?lang=%l;v=bso_gws_log.htm">gwsetup.log</a>
 ]
