New %J macro in setup.ml to etst for reorg environment

--- a/bin/distrib/setup/lang/gwf_ok.htm
+++ b/bin/distrib/setup/lang/gwf_ok.htm
@@ -46,36 +46,86 @@ sv: För information:
 
 <ul>
 <!-- REORG etc/config -->
-<li>[
-de: Die Parameter sind in der Textdatei <samp>%w%/%a.gwb%/etc%/config.txt</samp>.
-en: The parameters are recorded in the text file <samp>%w%/%a.gwb%/etc%/config.txt</samp>
+<li>
+%J{[
+de: Die Parameter sind in der Textdatei
+    <samp>%w%/%a.gwb%/etc%/config.txt</samp>.
+en: The parameters are recorded in the text file
+    <samp>%w%/%a.gwb%/etc%/config.txt</samp>
 es: Los parámetros son registrados en el fichero
     texto <samp>%w%/%a.gwb%/etc%/config.txt</samp>.
 fr: Les paramètres sont enregistrés dans le fichier
     texte <samp>%w%/%a.gwb%/etc%/config.txt</samp>.
 it: I parametri sono stati registrati nel file
-    testo <samp> dans le répertoire <samp>%w%/%a.gwb%/etc%/config.txt</samp>.
-lv: Ðie parametri ir ierakstîti teksta datnç <samp>%w%/%a.gwb%/etc%/config.txt</samp>.
-sv: Parametrarna har sparats i textfilen <samp>%w%/%a.gwb%/etc%/config.txt</samp>.
-]
-
-<li>[
+    testo <samp> dans le répertoire
+    <samp>%w%/%a.gwb%/etc%/config.txt</samp>.
+lv: Ðie parametri ir ierakstîti teksta datnç
+    <samp>%w%/%a.gwb%/etc%/config.txt</samp>.
+sv: Parametrarna har sparats i textfilen
+    <samp>%w%/%a.gwb%/etc%/config.txt</samp>.
+]|[
+de: Die Parameter sind in der Textdatei
+    <samp>%w%/%a.gwf</samp>.
+en: The parameters are recorded in the text file
+    <samp>%w%/%a.gwf</samp>
+es: Los parámetros son registrados en el fichero
+    texto <samp>%w%/%a.gwf</samp>.
+fr: Les paramètres sont enregistrés dans le fichier
+    texte <samp>%w%/%a.gwf</samp>.
+it: I parametri sono stati registrati nel file
+    testo <samp> dans le répertoire
+    <samp>%w%/%a.gwf</samp>.
+lv: Ðie parametri ir ierakstîti teksta datnç
+    <samp>%w%/%a.gwf</samp>.
+sv: Parametrarna har sparats i textfilen
+    <samp>%w%/%a.gwf</samp>.
+]}
+<li>
+%J{[
 de: Falls du einen Text angegeben hast, der am Fuß der Seiten angezeigt
-    werden soll, wurde er in der Datei <samp>%w%/%a.gwb%/etc%/trl.txt</samp> gespeichert.
+    werden soll, wurde er in der Datei
+    <samp>%w%/%a.gwb%/etc%/trl.txt</samp> gespeichert.
 en: If you gave a text to print at the bottom of the pages, it
-    is recorded in the file <samp>%w%/%a.gwb%/etc%/trl.txt</samp>.
+    is recorded in the file
+    <samp>%w%/%a.gwb%/etc%/trl.txt</samp>.
 es: Si Ud. ha escogido la opción de agregar un texto en la parte inferior de las
-    páginas, este texto es registrado en el fichero denominado <samp>%w%/%a.gwb%/etc%/trl.txt</samp>.
+    páginas, este texto es registrado en el fichero denominado
+    <samp>%w%/%a.gwb%/etc%/trl.txt</samp>.
 fr: Si vous avez donné un texte à afficher au bas des
-    pages, il est enregistré dans la fichier <samp>%w%/%a.gwb%/etc%/trl.txt</samp>.
+    pages, il est enregistré dans le fichier
+    <samp>%w%/%a.gwb%/etc%/trl.txt</samp>.
 it: Se avete scelto l'opzione di aggiungere un testo in piede di pagina,
-    questo testo è registrato nel file chiamato <samp>%w%/%a.gwb%/etc%/trl.txt</samp>.
+    questo testo è registrato nel file chiamato
+    <samp>%w%/%a.gwb%/etc%/trl.txt</samp>.
 lv: Ja Jûs norâdîjât arî katras lappuses noslçguma tekstu, tad ðis teksts
-    ir ierakstîts datnç <samp>%w%/%a.gwb%/etc%/trl.txt</samp>.
+    ir ierakstîts datnç
+    <samp>%w%/%a.gwb%/etc%/trl.txt</samp>.
 sv: Om du angav en text som ska stå längst ner på sidan, har denna text
-    sparats i filen benämnd <samp>%w%/%a.gwb%/etc%/trl.txt</samp>.
-]
-
+    sparats i filen benämnd
+    <samp>%w%/%a.gwb%/etc%/trl.txt</samp>.
+]|[
+de: Falls du einen Text angegeben hast, der am Fuß der Seiten angezeigt
+    werden soll, wurde er in der Datei
+    <samp>%w%/a%/etc%/%a%/trl.txt</samp> gespeichert.
+en: If you gave a text to print at the bottom of the pages, it
+    is recorded in the file
+    <samp>%w%/a%/etc%/%a%/trl.txt</samp>.
+es: Si Ud. ha escogido la opción de agregar un texto en la parte inferior de las
+    páginas, este texto es registrado en el fichero denominado
+    <samp>%w%/a%/etc%/%a%/trl.txt</samp>.
+fr: Si vous avez donné un texte à afficher au bas des
+    pages, il est enregistré dans le fichier
+    <samp>%w%/a%/etc%/%a%/trl.txt</samp>.
+it: Se avete scelto l'opzione di aggiungere un testo in piede di pagina,
+    questo testo è registrato nel file chiamato
+    <samp>%w%/a%/etc%/%a%/trl.txt</samp>.
+lv: Ja Jûs norâdîjât arî katras lappuses noslçguma tekstu, tad ðis teksts
+    ir ierakstîts datnç
+    <samp>%w%/a%/etc%/%a%/trl.txt</samp>.
+sv: Om du angav en text som ska stå längst ner på sidan, har denna text
+    sparats i filen benämnd
+    <samp>%w%/a%/etc%/%a%/trl.txt</samp>.
+  ]}
 </ul>
 
 [
