--- a/bin/distrib/setup/lang/bso_ok.htm
+++ b/bin/distrib/setup/lang/bso_ok.htm
@@ -54,9 +54,9 @@ sv: Operationen är avklarad. Din databas benämnd "%o" är skapad.
 ]
 
 [
-en: See the <a href="gwsetup?lang=%l;v=bso_comm.htm">alert messages</a>
+en: See the <a href="gwsetup?lang=%l;v=bso_comm.htm;anon=%a">alert messages</a>
     of the file <samp>comm.log</samp>.
-fr: Voir les <a href="gwsetup?lang=%l;v=bso_comm.htm">messages d’alerte</a>
+fr: Voir les <a href="gwsetup?lang=%l;v=bso_comm.htm;anon=%a">messages d’alerte</a>
     du fichier <samp>comm.log</samp>.
 ]
 
