Better use of %S (comm.log). Report error messages with.ged files

--- a/bin/distrib/setup/lang/bso_ok.htm
+++ b/bin/distrib/setup/lang/bso_ok.htm
@@ -54,10 +54,8 @@ sv: Operationen är avklarad. Din databas benämnd "%o" är skapad.
 ]
 
 [
-en: See the <a href="gwsetup?lang=%l;v=bso_comm.htm;anon=%a">alert messages</a>
-    of the file <samp>comm.log</samp>.
-fr: Voir les <a href="gwsetup?lang=%l;v=bso_comm.htm;anon=%a">messages d’alerte</a>
-    du fichier <samp>comm.log</samp>.
+en: See alert messages in file <a href="gwsetup?lang=%l;v=bso_comm.htm;anon=%a">%S</a>.
+fr: Voir les messages d’alerte dans le fichier <a href="gwsetup?lang=%l;v=bso_comm.htm;anon=%a">%S</a>.
 ]
 
 </p>
