--- a/bin/distrib/setup/lang/gw2gd_ok.htm
+++ b/bin/distrib/setup/lang/gw2gd_ok.htm
@@ -47,9 +47,7 @@ it: L'estrazione del file GEDCOM è terminata.
 lv: GEDCOM datnes apstrâde ir pabeigta.
 sv: Exporten av GEDCOM-filen är avslutad.
 ]
-
-<p />
-
+<p>
 [
 de: Es wurde eine Datei namens "%o" erzeugt.
 en: This has built a file named "%o".
@@ -60,9 +58,7 @@ it: Questa operazione ha creato un file chiamato "%o".
 lv: Rezultâtâ ir izviedota datne: "%o".
 sv: Det har skapats en fil benämnd "%o".
 ]
-
-<p />
-
+<p>
 [
 de: Diese Datei steht ihm Verzeichnis
 en: This file is in the directory
@@ -71,9 +67,25 @@ fi: Tämä tiedosto on hakemistossa
 fr: Ce fichier se trouve dans le répertoire
 it: Questo file si trova nella directory
 ] "%w".
-
-<p />
-
+<p>
+[
+en: Error messages in: %S.
+fr: Messages d'erreur dans : %S.
+]
+<pre>
+%g{- [
+de: empty file
+en: empty file
+es: fichero vacio
+fi: tyhjä tiedosto
+fr: fichier vide
+it: file vuoto
+lv: datne ir tukða
+sv: tom fil
+lv: datne ir tukða
+] -}
+</pre>
+<p>
 [
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
