--- a/bin/distrib/setup/lang/gwu_ok.htm
+++ b/bin/distrib/setup/lang/gwu_ok.htm
@@ -90,7 +90,10 @@ it: Questo file si trova nella directory "%w".
 }
 <p>
 
-Comm.log:
+[
+en: Error messages in: %S.
+fr: Messages d'erreur dans : %S.
+]
 <pre>
 %g{- [
 de: empty file
